# personal

./: README.md
crew1/: README.md  pyproject.toml
crew1/src/crew1/: crew.py  main.py
vasp_calculation_workflow/: .env  .gitignore  README.md  VaspCalculationFlow.html  guide_creator_flow.html  pyproject.toml
vasp_calculation_workflow/app/: vaspkit.1.5.1.linux.x64.tar.gz:Zone.Identifier
vasp_calculation_workflow/app/vaspkit.1.5.1/: acknowledgement  changelog  contributors  how_to_cite  how_to_install  how_to_set_auto_plot  how_to_set_environment_variables  license  setup.sh
vasp_calculation_workflow/app/vaspkit.1.5.1/citations/: vaspkit.bib  vaspkit.ris
vasp_calculation_workflow/app/vaspkit.1.5.1/docs/: readme.txt
vasp_calculation_workflow/app/vaspkit.1.5.1/utilities/: Makefile  cif2pos.py  hello.sh  vbz.py  xsd2pos.py
vasp_calculation_workflow/db/fa545dbd-9c87-4140-aeab-a5ee92d31b5c/: index_metadata.pickle
vasp_calculation_workflow/src/vasp_calculation_workflow/: 111.py  main.py  test.txt
vasp_calculation_workflow/src/vasp_calculation_workflow/tools/: RagTool.py  custom_tool.py  vaspkit_tool.py
vasp_calculation_workflow/vasp/: INCAR  KPOINTS  POSCAR  job.json
vasp_calculation_workflow/vasp123/: KPOINTS  POSCAR  POTCAR  job.json
vasp_calculation_workflow/vasp2/: INCAR  KPOINTS  fix.py  job.json
vasp_calculation_workflow/vasp3/: INCAR  POSCAR
vasp_calculation_workflow/vasp3_2.82/: POSCAR
vasp_calculation_workflow/vasp_4.92/: INCAR  KPOINTS  POSCAR  POTCAR  SYMMETRY
vasp_calculation_workflow/vasp_Fe/: INCAR  KPOINTS  SYMMETRY  job.json
(+959 files in other folders)
