[project]
name = "crew1"
version = "0.1.0"
description = "Crew1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
crew1 = "crew1.main:run"
run_crew = "crew1.main:run"
train = "crew1.main:train"
replay = "crew1.main:replay"
test = "crew1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
