[project]
name = "vasp_calculation_workflow"
version = "0.1.0"
description = "vasp_calculation_workflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

[project.scripts]
kickoff = "vasp_calculation_workflow.main:kickoff"
plot = "vasp_calculation_workflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
